# detectx

./: .gitignore  README.md  data.py  pyproject.toml
src/cornernet/: corner_pooling.py  hourglass.py  loss.py  loss_utils.py  model.py  train.py
src/detr/: dataset.py  dataset_voc.py  demo.py  engine.py  inference.py  ln_model.py  loss.py  metrics.py  model.py  requirements.txt  train.py
src/resnet/: model.py
src/yolo/: dataset.py  loss.py  model.py  train.py  utils.py
